--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+
+* {
+  color: #353326;
+  font-family: 'Pangolin', cursive;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  margin: 15px auto;
+  width: 90%;
+  max-width: 700px;
+  padding: 3vw;
+  border: 8px solid #76692B;
+  border-radius: 13px;
+  background: #9A8A41;
+}
+
+.header {
+  margin-bottom: 2vw;
+  padding: 1.5vw 0;
+  text-align: center;
+  border: 8px solid #76692B;
+  border-radius: 13px;
+  background-color: #FFE670;
+}
+
+h1 {
+  margin: 0 0 0.4vw 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+.tasks_list {
+  padding-top: 1vw;
+  border: 8px solid #76692B;
+  border-radius: 13px;
+  background-color: #FFE670;
+}
+
+.task {
+  margin-bottom: 1vw;
+  padding: 1vw;
+  font-size: 1.5vw;
+  border: 8px solid #76692B;
+  border-radius: 13px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btns_container {
+  display: flex;
+  align-items: center;
+}
+
+.btn {
+  width: 5vw;
+  height: 1.5vw;
+  margin: 0 1vw;
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 12px;
+  background-color: lightgrey;
+}
+
+ul li {
+  list-style-type: none;
+  margin-right: 3.5vw;
+  font-weight: bold;
+  height: 1vw;
+}
+
+.semaphorus {
+  margin: 0.2vw;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 25px;
+} 
+
+.dark {
+  background-color: #9C8B3E;
+}
+
+.medium {
+  background-color: #D6BC42;
+}
+
+.light {
+  background-color: #FFE25F;
+}
+
+.form {
+  margin-top: 2vw;
+  padding: 1vw 3vw;
+  border: 8px solid #76692B;
+  border-radius: 13px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #FFE670;
+}
+
+input {
+  margin: 1vw;
+  width: 25vw;
+  height: 2vw;
 }
